Adiciona exceções para autorização e autenticação

--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccessDenied" xml:space="preserve">
+    <value>Acesso negado.</value>
+  </data>
   <data name="EntityNotFoundMultiple" xml:space="preserve">
     <value>Não foi possível encontrar as entidades {0}.</value>
   </data>
@@ -125,5 +128,8 @@
   </data>
   <data name="FileNotFound" xml:space="preserve">
     <value>Não foi possível encontrar arquivo {0}.</value>
+  </data>
+  <data name="LoginFailed" xml:space="preserve">
+    <value>Email ou senha incorretos.</value>
   </data>
 </root>
