--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -132,6 +132,9 @@
   <data name="CreatePieceOk" xml:space="preserve">
     <value>Peça salva.</value>
   </data>
+  <data name="EmailField" xml:space="preserve">
+    <value>Email</value>
+  </data>
   <data name="EmailNotEqualsConfirmation" xml:space="preserve">
     <value>Email e email de confirmação são diferentes.</value>
   </data>
@@ -146,6 +149,15 @@
   </data>
   <data name="LoginFailed" xml:space="preserve">
     <value>Email ou senha incorretos.</value>
+  </data>
+  <data name="MinLengthError" xml:space="preserve">
+    <value>{0} deve ser maior que {1}.</value>
+  </data>
+  <data name="NameField" xml:space="preserve">
+    <value>Nome</value>
+  </data>
+  <data name="PasswordField" xml:space="preserve">
+    <value>Senha</value>
   </data>
   <data name="PasswordNotEqualsConfirmation" xml:space="preserve">
     <value>Senha e senha de confirmação são diferentes.</value>
